--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@types/cors": "^2.8.17",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "reflect-metadata": "^0.2.2",
